@@ -493,7 +493,7 @@ OmegaT failed to load the valid ones
  OmegaT 2.6.3 update 5
 ----------------------------------------------------------------------
    0 Enhancement
-   2 Bug fixes
+   3 Bug fixes
    0 Localisation update
 ----------------------------------------------------------------------
 2.6.3 update 5 vs. 2.6.3 update 4
@@ -505,6 +505,9 @@ OmegaT failed to load the valid ones
 
   - Filtering the Editor results in losing unsaved changes in the current segment
   https://sourceforge.net/p/omegat/bugs/627/
+
+  - tm/auto folder is created in wrong location
+  https://sourceforge.net/p/omegat/bugs/553/
 
 ----------------------------------------------------------------------
  OmegaT 2.6.3 update 4
